--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,12 @@
 __pycache__/
 *.py[cod]
 *$py.class
+*.so
 
 # Virtual environment
 venv/
-.venv/
+ENV/
 env/
-.env/
 
 # Distribution / packaging
 .Python
@@ -22,6 +22,7 @@ lib64/
 parts/
 sdist/
 var/
+wheels/
 *.egg-info/
 .installed.cfg
 *.egg
@@ -110,3 +111,7 @@ node_modules/
 
 # Anaconda
 .conda/
+
+# Project specific
+brokers.txt
+results/
